--- a/index.html
+++ b/index.html
@@ -23,30 +23,32 @@
         </div>
       </header>
       <main class="main__content">
-        <div class="layout">
-          <h2>Main Page</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+        <div class="main__content__wrap">
+          <div class="layout">
+            <h2>Main Page</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
 
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam. ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            pLorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-          </p>
-          <figure class="content__pic">
-            <img src="https://images.unsplash.com/photo-1703252933215-6b089d36d5bc?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-          </figure>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam. ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              pLorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+            </p>
+            <figure class="content__pic">
+              <img src="https://images.unsplash.com/photo-1703252933215-6b089d36d5bc?q=80&w=3387&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </figure>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
 
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam. ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-            pLorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
-          </p>
-          <figure class="content__pic">
-            <img src="https://images.unsplash.com/photo-1707496964676-8abbf31adb1e?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-          </figure>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam. ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+              pLorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error obcaecati omnis qui quia reprehenderit, rerum tempora voluptates. Consequuntur debitis deleniti labore nostrum perspiciatis quae voluptas! Aut hic iusto ullam.
+            </p>
+            <figure class="content__pic">
+              <img src="https://images.unsplash.com/photo-1707496964676-8abbf31adb1e?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </figure>
+          </div>
         </div>
       </main>
       <footer class="footer">
